# STLbp

./: README.md  pyproject.toml  run.py
data/prisons/: climate-and-punishment-geocoded.csv  filter_points.py  filtered_points.csv  filtered_points.geojson  stl_dataset_extra_activities_plus_cessions_plus_prices_wgs84.geojson
data/stl_dataset/step_1/input/state_trust/source/CO/: SLB_Mineral_Estate.dbf  SLB_Mineral_Estate.sbn  SLB_Mineral_Estate.sbx  SLB_Mineral_Estate.shp  SLB_Mineral_Estate.shp.xml  SLB_Mineral_Estate.shx  SLB_Surface_Ownership.dbf  SLB_Surface_Ownership.sbn  SLB_Surface_Ownership.sbx  SLB_Surface_Ownership.shp  SLB_Surface_Ownership.shp.xml  SLB_Surface_Ownership.shx
data/stl_dataset/step_1/input/state_trust/source/SD-subsurface/: SD-Subsurface.dbf  SD-Subsurface.shp  SD-Subsurface.shx
data/stl_dataset/step_2_5/input/: cession-codebook.csv  cessions.geojson
data/stl_dataset/step_2_5/output/: stl_dataset_extra_activities_plus_cessions.geojson  stl_dataset_extra_activities_plus_cessions_wgs84.geojson
land_grab_2/stl_dataset/step_1/: dataset_cleaning.py  dataset_extraction.py  state_trust_config.py
land_grab_2/stl_dataset/step_2/land_activity_search/: activity_match.py
land_grab_2/stl_dataset/step_2_5/: get_cessions.py
land_grab_2/stl_dataset/step_3/: cession_purchase_price.py
land_grab_2/stl_dataset/step_4/: dataset_summary_stats.py
land_grab_2/utilities/: utils.py
public_data/CSVs/: Tribal-Summary.csv
public_data/Spatial Files/: Grist-STLbps.geojson  Grist_STLbps-Tribal-Summary-WGS84.geojson  Grist_STLbps-WGS84.geojson
(+16 files in other folders)
