[project]
name = "land_grab_2"
version = "0.1.0"
authors = [
  { name = "Clayton Aldern", email = "caldern@grist.org" },
  { name = "Parker Ziegler", email = "peziegler@cs.berkeley.edu" },
]
readme = "README.md"
dependencies = [
  "typer==0.15.1",
  "shapely==2.0.6",
  "pyogrio==0.10.0",
  "geopandas==1.0.1",
  "pandas==2.2.3",
  "tqdm==4.67.1",
  "dask==2024.12.0",
  "compose==1.6.2",
  "ratelimiter==1.2.0.post0",
  "numpy==2.1.3",
  "requests==2.32.3",
  "openpyxl==3.1.5",
  "psycopg[binary]==3.2.3",
  "pyarrow==18.1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["land_grab_2"]